# text-to-sql

./: .env.example  .gitignore  LICENSE  README.md  env.example  llm_endpoints.yaml  pyproject.toml
demos/: 01_naive_demo.py  02_token_waste_analysis.py  05_schema_pruning_ablation_study.py  05_schema_pruning_approach_comparison.py  05_schema_pruning_benchmark.py  05_schema_pruning_e2e_validation.py  06_ablation_study.py  06_agentic_ablation_study.py  06_agentic_core.py  06_agentic_full_pipeline.py  07_adversarial_eval.py  scenarios.json
evals/: adversarial_queries.json  generate_adversarial_queries.py  generate_national_id_queries.py  golden_queries.json
schema/: sample_data.sql  schema_setup.sql
scripts/: eval_summary.py
src/text_to_sql/: app_logger.py  db.py  llm_config.py  schema_pruner.py  usage_tracker.py
src/text_to_sql/agents/: __init__.py  base.py  cache.py  orchestrator.py  query_refinement.py  schema_intelligence.py  security_governance.py  sql_generation.py  types.py
src/text_to_sql/naive/: query.py
src/text_to_sql/prompts/: prompts.json  prompts.py
tests/: conftest.py  test_cache.py  test_orchestrator.py  test_query_refinement.py  test_schema_intelligence.py  test_schema_pruner.py  test_security_governance.py  test_sql_generation.py
